add slack and discord intergration successfully